web/src/main/webapp/includes/styles.css
/* ... */
.wrapText {
    word-wrap: break-word;
    display: inline-block;
    width: 100px;
}

.itemsTable {
    border-collapse: collapse;
    width: 450px;
    height: 100px;
    border-top: 1px #4d4d4d solid;
    border-bottom: 1px #4d4d4d solid;
}

.itemsTable td {
    padding: 10px 0;
}

a.dnShortcut:active {
    text-decoration: none !important;
}

a.dnShortcut:hover {
    text-decoration: underline !important;
}
a.dnShortcut:active {
    text-decoration: none !important;
}

a.dnShortcut:hover {
    text-decoration: underline !important;
}

.pointed-span {
    cursor: pointer;
}

.message_box_confirmation {
    display: block;
	height:120px!important;
}

.rule-table-expression-td {
    width: 450px;
}

.rule-table-action-summary-td {
    width: 350px;
}

.action-summary-table {
    width: 350px;
}
.popup-box-buttons {
    padding-top: 5px;
    padding-bottom: 5px;
}

.popup-box-buttons input {
    float: left;
    cursor: pointer;
    margin-left: 10px !important;
}

.popup-box-buttons input:first-child {
    float: left;
    cursor: pointer;
    margin-left: 0px !important;
}

.hidden {
    display: none !important;
}

.left {
    float: left;
}

.right {
    float: right;
}

.clear {
    clear: both;
}

.error {
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    font-style: normal;
    font-weight: bold;
    color: #E46E16;
}

.errorBlock {
    text-align: left;
}

/*************************/
/*** System properties ***/
/*************************/

#systemForm input[type=file] {
    padding: 10px !important;
}

#systemForm  select, #systemForm input[type=text], #systemForm input[type=password], #systemForm input[type=file] {
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    color: #4D4D4D;
    background-color: white;
    border-width: 0px;
    margin-left: 4px;
    margin-right: 9px;
    margin-top: 1px;
    margin-bottom: 7px;
    width: 100% !important;
    line-height: 16px;
    padding-top: 2px;
    padding-bottom: 2px;
    border: 1px solid silver;
    border-radius: 2px;
    box-shadow: 2px 2px 5px 2px silver;
    padding-left: 4px;
}

#systemForm input.inputError, #systemForm  option.inputError  {
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    color: #4D4D4D;
    background-color: white;
    border-width: 0px;
    margin-left: 4px;
    margin-right: 9px;
    margin-top: 1px;
    margin-bottom: 7px;
    width: 100% !important;
    line-height: 16px;
    padding-top: 2px;
    padding-bottom: 2px;
    border: 1px solid red !important;
    border-radius: 2px;
    box-shadow: 2px 2px 5px 2px #FF6666 !important;
    padding-left: 4px;
}

#systemForm div.sysProps {
    width: 800px;
}

#systemForm .mousePointer {
    cursor: pointer;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    padding-right: 5px;
}

#systemForm .subGroup {
    padding-left: 20px;
}

#systemForm .groups {
    padding-left: 20px;
    padding-top: 20px;
    padding-bottom: 20px;
}

#systemForm .group {
    padding-bottom: 10px;
}

#systemForm .propertyHolder {
    padding-left: 10px;
    padding-bottom: 10px;
    line-height: 0px;
}

#systemForm .propertyDescription {
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 13px;
    color: #947F94;
    line-height: 20px;
    padding-left: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
}

#systemForm .propertyInputHolder {
    float: left;
    padding-top: 5px;
    padding-bottom: 0px;
}

#systemForm .propertyLabel {
    font-family: Tahoma, Arial, Helvetica, sans-serif;
    font-weight: bold;
    line-height: 20px;
    padding-left: 20px;
    padding-right: 10px;
    padding-top: 3px;
    color: #9D3BC9;
    float: left;
    width: 160px;
}

#systemForm br.clear {
    clear: both;
}

#systemForm .propertyRequired {
    color: orange;
    float: left;
    padding-top: 17px;
    font-weight: bold;
    font-size: 12px;
    padding-left: 20px;
}

#systemForm .propertyMeasurements {
    float: left;
    padding-left: 20px;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    color: #947F94;
    line-height: 20px;
    padding-top: 3px;
}

#systemForm .propertyInput {
    float: left;
    padding-top: 2px;
}

#systemForm .propertyInput img {
    padding-left: 5px;
}

#systemForm .radioLabel {
    float: left;
    line-height: 20px;
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 12px;
    color: #947F94;
    padding-right: 30px;
    margin-top: -2px;
}

#systemForm .propertyInput input {
    float: left;
}

#systemForm .propertyInput input:disabled {
    background-color: #F0F0F0 !important;
}

#systemForm .propertyInput input[type=radio] {
    width: 13px;
    height: 13px;
}

#systemForm table#systemConfirmationTable {
    border-top: 1px solid gray;
    border-left: 1px solid gray;
    border-radius: 2px;
    box-shadow: 2px 2px 5px 2px silver;
}

#systemForm table#systemConfirmationTable th {
    border-right: 1px solid gray;
    border-bottom: 1px solid gray;
}

#systemForm table#systemConfirmationTable td {
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    border-right: 1px solid gray;
    border-bottom: 1px solid gray;
    font-size: 11px;
    padding: 4px;
}

#systemForm .systemErrors {
    width: 100%;
    padding-top: 15px;
}

#systemForm .systemError {
    font-family: Tahoma, Arial, Helvetica, Sans-Serif;
    font-size: 11px;
    font-style: normal;
    font-weight: bold;
    color: #E46E16;
}

#systemForm .propertyLabel .table_title_Admin {
    font-size: 11px !important;
}

.scheduleLink {
    display: block;
}

